<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_grey">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="0dp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_65sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_30sdp"
                        app:cardCornerRadius="@dimen/_5sdp"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_45sdp"
                            android:layout_height="@dimen/_45sdp"
                            android:src="@drawable/ic_launcher_background"
                            android:layout_gravity="center_vertical|center_horizontal"
                            />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.8"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:gravity="start"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sdp"
                        android:fontFamily="@font/google_sans_bold"
                        android:text="Test ramya"
                        />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_location_icon"
                            android:layout_width="@dimen/_14sdp"
                            android:layout_height="@dimen/_14sdp"
                            android:src="@drawable/location_outline"
                            android:layout_centerVertical="true"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_toRightOf="@+id/iv_location_icon"
                            android:ellipsize="end"
                            android:fontFamily="@font/google_sans_regular"
                            android:gravity="start"
                            android:maxLines="1"
                            android:text="jakarta"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/_16sdp" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:gravity="start"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:fontFamily="@font/google_sans_bold"
                    android:text="test ramya"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/tv_purchased_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/purchased_on"
                        android:textAlignment="textStart"
                        android:textColor="@color/grey"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"
                        android:textSize="@dimen/_14sdp"
                        android:text="21 Jul 2023"
                        android:layout_toRightOf="@+id/tv_purchased_on"
                        android:textAlignment="textEnd"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/grey_light_dark"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/tv_valid_until"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/valid_until"
                        android:textAlignment="textStart"
                        android:textColor="@color/grey"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"
                        android:textSize="@dimen/_14sdp"
                        android:text="21 Jul 2025"
                        android:layout_toRightOf="@+id/tv_valid_until"
                        android:textAlignment="textEnd"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/grey_light_dark"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/tv_confirmation_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/confirmation_id"
                        android:textAlignment="textStart"
                        android:textColor="@color/grey"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"
                        android:textSize="@dimen/_14sdp"
                        android:text="FDV-00151"
                        android:layout_toRightOf="@+id/tv_confirmation_id"
                        android:textAlignment="textEnd"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/grey_light_dark"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/tv_reedem_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/reedem_id"
                        android:textAlignment="textStart"
                        android:textColor="@color/grey"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"
                        android:textSize="@dimen/_14sdp"
                        android:text="VWIekd894"
                        android:layout_toRightOf="@+id/tv_reedem_id"
                        android:textAlignment="textEnd"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/grey_light_dark"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/tv_amount_paid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/amount_paid"
                        android:textAlignment="textStart"
                        android:textColor="@color/grey"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"
                        android:textSize="@dimen/_14sdp"
                        android:text="Rp58"
                        android:layout_toRightOf="@+id/tv_amount_paid"
                        android:textAlignment="textEnd"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/grey_light_dark"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/tv_payment_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/amount_paid"
                        android:textAlignment="textStart"
                        android:textColor="@color/grey"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"
                        android:textSize="@dimen/_14sdp"
                        android:text="COD"
                        android:layout_toRightOf="@+id/tv_payment_option"
                        android:textAlignment="textEnd"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/grey_light_dark"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/tv_voucher_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_bold"
                        android:textSize="@dimen/_17sdp"
                        android:text="Rp60"
                        android:textAlignment="textStart"
                        android:textColor="@color/red_color"
                        android:layout_centerVertical="true"
                        />

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:background="@drawable/btn_custom"
                        android:text="@string/text_expired"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_13sdp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:paddingStart="@dimen/_25sdp"
                        android:paddingLeft="@dimen/_25sdp"
                        android:paddingEnd="@dimen/_25sdp"
                        android:paddingRight="@dimen/_25sdp"
                        android:paddingTop="@dimen/_4sdp"
                        android:paddingBottom="@dimen/_4sdp"
                        android:fontFamily="@font/google_sans_bold"
                        />

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>